@@ -6,6 +6,11 @@
 
                                   Changelog
 
+Daniel Fandrich (13 Mar 2008)
+- Added tests 622-625 to test SFTP/SCP uploads. Test 625 was an attempt to
+  reproduce the --ftp-create-dirs problem reported by Brian Ulm, but that
+  seems to need a call curl_easy_reset() which this test case doesn't do.
+
 Daniel Stenberg (13 Mar 2008)
 - Brian Ulm figured out that if you did an SFTP upload with
   CURLOPT_FTP_CREATE_MISSING_DIRS to create a directory, and then re-used the
